...
            .background(Color("ButtonBackground"))
            .overlay(
                RoundedRectangle(cornerRadius: 0)
                    .stroke(Color.gray.opacity(0.5), lineWidth: 1)
            )
            .contentShape(Rectangle())
            .accessibilityIdentifier("burgerMenuButton")
            .onTapGesture { rightButtonAction() }

        case .close:
            Button(action: rightButtonAction) {
                ZStack {
                    Image(systemName: "xmark")
...
